deny-from-other-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: dev
  name: deny-from-other-ns
spec:
  podSelector:
    matchLabels: {}
  ingress:
  - from: []
  policyTypes:
    - Ingress
